# ai-stability

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
docs/: launch-kit.md
examples/: prompt.txt  sample-output.txt
src/ai_stability/: __init__.py  __main__.py  cli.py  diffing.py  exceptions.py  models.py  output.py  runner.py  scoring.py  storage.py
src/ai_stability/providers/: __init__.py  base.py  openai_provider.py
tests/: test_runner.py  test_scoring.py
