[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stability"
version = "0.1.1"
description = "CLI-first LLM stability analyzer for measuring output consistency across repeated prompt runs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Abid Ali" }
]
keywords = [
  "llm",
  "stability",
  "ai",
  "openai",
  "cli",
  "prompt-testing",
  "model-evaluation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "openai>=1.30.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.2.0",
  "twine>=6.1.0",
]

[project.scripts]
ai-stability = "ai_stability.cli:app"

[project.urls]
Homepage = "https://github.com/buildwithabid/ai-stability"
Repository = "https://github.com/buildwithabid/ai-stability"
Issues = "https://github.com/buildwithabid/ai-stability/issues"
Changelog = "https://github.com/buildwithabid/ai-stability/releases"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
